WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240195
Fix flakey test by using the old API on old systems.
https://bugs.webkit.org/show_bug.cgi?id=240195
Summary
Fix flakey test by using the old API on old systems.
Megan Gardner
Reported
2022-05-06 16:46:36 PDT
Fix flakey test by using the old API on old systems.
Attachments
Patch
(12.16 KB, patch)
2022-05-06 16:53 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(12.14 KB, patch)
2022-05-06 21:11 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2022-05-06 16:53:43 PDT
Created
attachment 458982
[details]
Patch
Megan Gardner
Comment 2
2022-05-06 21:11:20 PDT
Created
attachment 458989
[details]
Patch for landing
EWS
Comment 3
2022-05-06 22:28:53 PDT
Committed
r293947
(
250393@main
): <
https://commits.webkit.org/250393@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458989
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-05-06 22:29:15 PDT
<
rdar://problem/92897878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug