Source/WebKit/UIProcess/ios/WebDataListSuggestionsDropdownIOS.mm
@@ -552,7 +552,11 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 
 #pragma mark UIContextMenuInteractionDelegate
 
+#if HAVE(UI_CONTEXT_MENU_PREVIEW_ITEM_IDENTIFIER)
 - (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configuration:(UIContextMenuConfiguration *)configuration highlightPreviewForItemWithIdentifier:(id<NSCopying>)identifier
+#else
+- (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction previewForHighlightingMenuWithConfiguration:(UIContextMenuConfiguration *)configuration
+#endif
 {
     return [self.view _createTargetedContextMenuHintPreviewForFocusedElement];
 }
