Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm
@@ -416,8 +416,11 @@ static const CGFloat kDateTimePickerControlMargin = 6;
     return UIEdgeInsetsZero;
 }
 
-
+#if HAVE(UI_CONTEXT_MENU_PREVIEW_ITEM_IDENTIFIER)
 - (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configuration:(UIContextMenuConfiguration *)configuration highlightPreviewForItemWithIdentifier:(id<NSCopying>)identifier
+#else
+- (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction previewForHighlightingMenuWithConfiguration:(UIContextMenuConfiguration *)configuration
+#endif
 {
     return [_view _createTargetedContextMenuHintPreviewForFocusedElement];
 }
